--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   height: 100%;
   font-family: "Bebas Neue", "Roboto Condensed", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 html {
@@ -16,6 +18,14 @@ html {
 * {
   box-sizing: border-box;
 }
+
+/* *,
+*::before,
+*::after {
+  box-sizing: inherit;
+} */
+
+
 
 img {
   max-width: 100%;
@@ -46,6 +56,7 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  content: "";
 }
 
 @media
@@ -186,6 +197,7 @@ only screen and (                min-resolution: 2dppx) {
   height: 90px;
   margin-right: 16px;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 .site-right-list-heading {
