--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
 /* GLOBAL-STYLES  */
+html {
+  box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing:inherit;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -8,22 +20,10 @@ body {
   font-family: "Bebas Neue", "Roboto Condensed", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  background-color: #222;
+  color: #222;
 }
 
-html {
-  height: 100%;
-  scroll-behavior: smooth;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* *,
-*::before,
-*::after {
-  box-sizing: inherit;
-} */
 
 
 
@@ -39,52 +39,46 @@ img {
 /* CONTAINER  */
 .container {
   width: 100%;
-  max-width: 1240px;
+  max-width: 1200px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding-right: 50px;
+  padding-left: 50px;
 }
-
-
-/* SITE-LEFT-BACKGROUND-IMAGE  */
-.site-left {
-  display: flex;
-  width: 50%;
-  height: 782px;
-  background-image: url(../img/background-img.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  content: "";
-}
-
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
-  .site-left {
-    background-image: url(../img/background-img@2x.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-  }
-}
-
-
 
 /* MAIN-CONTENT  */
 .main-content {
-  display: flex;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
+/* SITE-WRAPPER */
 .site-wrapper {
-  display: flex;
+    flex-grow: 1;
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
 }
+/* SITE-LEFT-BACKGROUND-IMAGE  */
+.site-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 54px;
+  padding: 24px;
+  width: 100%;
+  min-width: 600px;
+  background-image: url(../img/background-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+  content: "";
+}
+
 
 .site-left-heading {
   padding: 0;
@@ -100,10 +94,7 @@ only screen and (                min-resolution: 2dppx) {
 }
 
 .site-left-wrapper {
-  padding-top: 326px;
-  padding-bottom: 326px;
-  padding-left: 158px;
-  padding-right: 157px;
+  width: 285px;
 }
 
 .site-button {
@@ -146,8 +137,10 @@ only screen and (                min-resolution: 2dppx) {
 
 /* SITE-RIGHT  */
 .site-right {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+  padding-top: 54px;
+  background-color:#fff;
 
 }
 
@@ -267,7 +260,6 @@ only screen and (                min-resolution: 2dppx) {
   font-size: 14px;
   line-height: normal;
   font-weight: bold;
-  margin-left: 54px;
   border-radius: 4px;
   text-decoration: none;
   transition: all 0.5s ease;
@@ -279,4 +271,17 @@ only screen and (                min-resolution: 2dppx) {
 
 .upload-link:active {
   opacity: 0.6;
+}
+
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+  .site-left {
+    background-image: url(../img/background-img@2x.jpg);
+  }
 }
